*Updated readme steps and doc format. *Updated startApp.sh file to run without modifying